Dark mode - fix th for table fieldtype

--- a/resources/css/components/fieldtypes/table.css
+++ b/resources/css/components/fieldtypes/table.css
@@ -13,7 +13,7 @@ Table Fieldtype
             @apply
                 z-10
                 p-2
-                dark:bg-gray-900
+                dark:bg-gray-950
                 border-b bg-gray-50
                 not-last:border-e overflow-hidden
                 dark:border-gray-800 dark:border-b-gray-700
